--- a/client/package.json
+++ b/client/package.json
@@ -7,14 +7,14 @@
 		"@emotion/styled": "^11.11.0",
 		"@mui/material": "^5.15.11",
 		"@reduxjs/toolkit": "^2.2.1",
+		"i18next": "^23.10.0",
+		"i18next-http-backend": "^2.5.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-i18next": "^14.0.5",
 		"react-redux": "^9.1.0",
 		"react-router-dom": "^6.22.2",
-		"typescript": "^5.3.3",
-		"i18next": "^23.10.0",
-		"i18next-http-backend": "^2.5.0"
+		"typescript": "^5.3.3"
 	},
 	"scripts": {
 		"start": "react-scripts start",
