--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"dev": "concurrently \"npm run server\" \"npm run client\"",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
-	"author": "Your Name",
+	"author": "Joshua M. Small",
 	"license": "MIT",
 	"dependencies": {
 		"concurrently": "^8.2.2"
