--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -7,6 +7,7 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "Node",
+    "resolveJsonModule": true,
     "jsx": "react",
     "baseUrl": "./src",
     "paths": {
