--- a/client/package.json
+++ b/client/package.json
@@ -14,12 +14,16 @@
 		"react-i18next": "^14.0.5",
 		"react-redux": "^9.1.0",
 		"react-router-dom": "^6.22.2",
-		"typescript": "^5.3.3"
+		"typescript": "^5.3.3",
+		"web-vitals": "^3.5.2"
 	},
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
+	},
+	"devDependencies": {
+		"@types/react-dom": "^18.2.19"
 	}
 }
