--- a/server/package.json
+++ b/server/package.json
@@ -8,13 +8,14 @@
 		"dev": "nodemon app.js",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
-	"author": "Your Name",
+	"author": "Joshua M. Small",
 	"license": "MIT",
 	"dependencies": {
 		"express": "^4.18.3",
 		"mongoose": "^8.2.0"
 	},
 	"devDependencies": {
+		"@types/express": "^4.17.21",
 		"@types/jest": "^29.5.12",
 		"jest": "^29.7.0",
 		"nodemon": "^3.1.0",
