--- a/client/package.json
+++ b/client/package.json
@@ -1,29 +1,41 @@
 {
-	"name": "client",
-	"version": "0.1.0",
-	"private": true,
-	"dependencies": {
-		"@emotion/react": "^11.11.4",
-		"@emotion/styled": "^11.11.0",
-		"@mui/material": "^5.15.11",
-		"@reduxjs/toolkit": "^2.2.1",
-		"i18next": "^23.10.0",
-		"i18next-http-backend": "^2.5.0",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"react-i18next": "^14.0.5",
-		"react-redux": "^9.1.0",
-		"react-router-dom": "^6.22.2",
-		"typescript": "^5.3.3",
-		"web-vitals": "^3.5.2"
-	},
-	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject"
-	},
-	"devDependencies": {
-		"@types/react-dom": "^18.2.19"
-	}
+  "name": "client",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.11",
+    "@reduxjs/toolkit": "^2.2.1",
+    "i18next": "^23.10.0",
+    "i18next-http-backend": "^2.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-i18next": "^14.0.5",
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.2",
+    "typescript": "^5.3.3",
+    "web-vitals": "^3.5.2"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "@types/react-dom": "^18.2.19"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
