--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
 	"license": "MIT",
 	"dependencies": {
 		"concurrently": "^8.2.2"
+	},
+	"devDependencies": {
+		"react-scripts": "^5.0.1"
 	}
 }
