--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,9 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.0",
+    "@babel/preset-env": "^7.24.0",
+    "@babel/preset-react": "^7.23.3",
     "@types/react-dom": "^18.2.19"
   },
   "browserslist": {
