--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,9 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.11",
+    "@mui/lab": "^5.0.0-alpha.166",
     "@mui/material": "^5.15.11",
+    "@mui/types": "^7.2.13",
     "@reduxjs/toolkit": "^2.2.1",
     "i18next": "^23.10.0",
     "i18next-http-backend": "^2.5.0",
