--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
 		"@mui/material": "^5.15.11",
 		"@mui/types": "^7.2.13",
 		"@reduxjs/toolkit": "^2.2.1",
+		"faker": "^5.5.3",
 		"i18next": "^23.10.0",
 		"i18next-http-backend": "^2.5.0",
 		"react": "^18.2.0",
@@ -30,6 +31,7 @@
 		"@babel/core": "^7.24.0",
 		"@babel/preset-env": "^7.24.0",
 		"@babel/preset-react": "^7.23.3",
+		"@types/faker": "^6.6.9",
 		"@types/jest": "^29.5.12",
 		"@types/react-dom": "^18.2.19",
 		"jest": "^29.7.0",
@@ -48,4 +50,3 @@
 		]
 	}
 }
-
