--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,6 @@
 		"react-i18next": "^14.0.5",
 		"react-redux": "^9.1.0",
 		"react-router-dom": "^6.22.2",
-		"typescript": "^5.3.3",
 		"web-vitals": "^3.5.2"
 	},
 	"scripts": {
@@ -34,9 +33,11 @@
 		"@babel/preset-react": "^7.23.3",
 		"@types/faker": "^6.6.9",
 		"@types/jest": "^29.5.12",
+		"@types/node": "^20.11.24",
 		"@types/react-dom": "^18.2.19",
 		"jest": "^29.7.0",
-		"ts-jest": "^29.1.2"
+		"ts-jest": "^29.1.2",
+		"typescript": "^5.3.3"
 	},
 	"browserslist": {
 		"production": [
