--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Ignore node_modules in the root directory
 node_modules/
 
+# Ignore package lock file
+package-lock.json
+
 # Ignore compiled TypeScript files
 *.js
 *.js.map
