--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,6 +1,9 @@
 # Ignore node_modules in the client directory
 node_modules/
 
+# Ignore package lock file
+package-lock.json
+
 # Ignore build artifacts
 build/
 dist/
