--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -24,6 +24,9 @@
       ],
       "shared/types/*": [
         "shared/types/*"
+      ],
+      "@types/*": [
+        "node_modules/@types/*"
       ]
     }
   }
