updated .gitignote to include typscript configs

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@ node_modules/
 # Ignore package lock file
 package-lock.json
 
-# Ignore compiled TypeScript files
-*.js
-*.js.map
-*.d.ts
+# Ignore build artifacts
+build/
+dist/
