faker fix + rouate wrapper changes

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -17,6 +17,9 @@
     ],
     "types": [
       "react-hook-form",
+      "node",
+      "react",
+      "faker"
     ],
     "paths": {
       "*": [
