--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"server": "cd server && node app.js",
 		"client": "cd client && npm start",
 		"dev": "concurrently \"npm run server\" \"npm run client\"",
+		"lint": "eslint .",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"author": "Joshua M. Small",
@@ -16,6 +17,7 @@
 		"concurrently": "^8.2.2"
 	},
 	"devDependencies": {
+		"eslint": "^8.57.0",
 		"react-scripts": "^5.0.1"
 	}
 }
