--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
 		"react-i18next": "^14.0.5",
 		"react-redux": "^9.1.0",
 		"react-router-dom": "^6.22.2",
+		"redux-thunk": "^3.1.0",
 		"web-vitals": "^3.5.2"
 	},
 	"scripts": {
