--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	},
 	"devDependencies": {
 		"eslint": "^8.57.0",
-		"react-scripts": "^5.0.1"
+		"react-scripts": "^5.0.1",
+		"ts-node": "^10.9.2"
 	}
 }
