--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "server",
 	"version": "1.0.0",
+	"type": "module",
 	"description": "Backend server for my MERN app",
 	"main": "app.js",
 	"scripts": {
@@ -11,14 +12,18 @@
 	"author": "Joshua M. Small",
 	"license": "MIT",
 	"dependencies": {
+		"cors": "^2.8.5",
 		"express": "^4.18.3",
 		"mongoose": "^8.2.0"
 	},
 	"devDependencies": {
+		"@types/cors": "^2.8.17",
 		"@types/express": "^4.17.21",
 		"@types/jest": "^29.5.12",
 		"jest": "^29.7.0",
 		"nodemon": "^3.1.0",
-		"ts-jest": "^29.1.2"
+		"ts-jest": "^29.1.2",
+		"ts-node": "^10.9.2",
+		"typescript": "^5.4.2"
 	}
 }
