--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,6 @@ services:
     volumes:
       - ./data:/data/db
     environment:
+      - MONGO_INITDB_DATABASE=eventsDB
       - MONGO_INITDB_ROOT_USERNAME=admin
       - MONGO_INITDB_ROOT_PASSWORD=password
