--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
 	"name": "i18next-translation",
 	"version": "1.0.0",
 	"description": "This is a MERN (MongoDB, Express.js, React.js, Node.js) stack application with Redux for state management and Docker support.",
-	"main": "server/app.js",
+	"main": "server/server.js",
 	"scripts": {
 		"start": "cd client && npm start",
-		"server": "cd server && node app.js",
+		"server": "cd server && node server.js",
 		"client": "cd client && npm start",
 		"dev": "concurrently \"npm run server\" \"npm run client\"",
 		"lint": "eslint .",
