--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
 		"react-i18next": "^14.1.0",
 		"react-redux": "^9.1.0",
 		"react-router-dom": "^6.22.3",
+		"react-scripts": "^5.0.1",
 		"redux-thunk": "^3.1.0",
 		"web-vitals": "^3.5.2"
 	},
@@ -31,6 +32,7 @@
 	},
 	"devDependencies": {
 		"@babel/core": "^7.24.0",
+		"@babel/plugin-proposal-private-property-in-object": "^7.21.11",
 		"@babel/preset-env": "^7.24.0",
 		"@babel/preset-react": "^7.23.3",
 		"@types/jest": "^29.5.12",
