--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
 	},
 	"devDependencies": {
 		"eslint": "^8.57.0",
-		"react-scripts": "^5.0.1",
-		"ts-node": "^10.9.2"
+		"react-scripts": "^5.0.1"
 	}
 }
