--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,19 +5,17 @@
         "es2021": true
     },
     "extends": [
-        "plugin:react/recommended",
-        "eslint:recommended",
+        "react-app",
         "plugin:@typescript-eslint/recommended"
     ],
     "parserOptions": {
-        "ecmaVersion": "latest",
+        "ecmaVersion": 12,
         "sourceType": "module",
         "ecmaFeatures": {
             "jsx": true
         }
     },
     "plugins": [
-        "react",
         "@typescript-eslint"
     ],
     "settings": {
