--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,9 @@
 		"redux-thunk": "^3.1.0",
 		"web-vitals": "^3.5.2"
 	},
+	"overrides": {
+		"typescript": "^5.4.2"
+	},
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
