--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"server": "cd server && node server.js",
 		"client": "cd client && npm start",
 		"dev": "concurrently \"npm run server\" \"npm run client\"",
+		"all": "npm-run-all --parallel server client",
 		"lint": "eslint .",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
