--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,8 @@
 		"express": "^4.18.3",
 		"http-proxy": "^1.18.1",
 		"http-proxy-middleware": "^2.0.6",
-		"mongoose": "^8.2.1"
+		"mongoose": "^8.2.1",
+		"pg": "^8.11.3"
 	},
 	"devDependencies": {
 		"@types/cors": "^2.8.17",
