--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
 		"@mui/lab": "^5.0.0-alpha.167",
 		"@mui/material": "^5.15.12",
 		"@mui/types": "^7.2.13",
+		"@mui/x-date-pickers": "^6.19.6",
 		"@reduxjs/toolkit": "^2.2.1",
 		"@types/axios": "^0.14.0",
 		"axios": "^1.6.7",
