--- a/.env-example
+++ b/.env-example
@@ -1,1 +1,3 @@
+PGADMIN_DEFAULT_EMAIL=your_email@email.com  
+PGADMIN_DEFAULT_PASSWORD=your_password_here
 POSTGRES_SUPERUSER_PASSWORD=your_password_here
