Log out database information during image build

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,9 @@ services:
       - app-network
 
   postgres:
-    image: postgres
+    build:
+      context: .
+      dockerfile: Dockerfile.postgres # Use the custom Dockerfile
     container_name: postgres
     ports:
       - '5432:5432'
