removed causing errors

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,7 @@ services:
       - app-network
 
   postgres:
-    build:
-      context: .
-      dockerfile: Dockerfile.postgres # Use the custom Dockerfile
+    image: postgres
     container_name: postgres
     ports:
       - '5432:5432'
