--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,39 +1,51 @@
 version: '3.8'
 
 services:
-  mongo:
+  docker-mongo:
     image: mongo
-    container_name: mongo
+    container_name: docker-mongodb
+    volumes:
+      - mongo_data:/data/db
     ports:
       - '27017:27017'
     networks:
-      - app-network
+      - default
+    logging:
+      driver: json-file
+      options:
+        max-size: '10m'
+        max-file: '5'
+    restart: always
 
-  postgres:
+  docker-postgresql:
     image: postgres
-    container_name: postgres
+    container_name: docker-postgresql
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    environment:
+      POSTGRES_USER: docker
+      POSTGRES_PASSWORD: docker
+      POSTGRES_DB: docker
     ports:
       - '5432:5432'
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: ${POSTGRES_SUPERUSER_PASSWORD}
-      POSTGRES_DB: eventDB
     networks:
-      app-network:
-        aliases:
-          - postgres_jms # Updated alias to match the desired host name
-    depends_on:
-      - mongo
+      - default
+    restart: always
     healthcheck:
       test: ['CMD-SHELL', 'pg_isready -U postgres']
-      interval: 10s
-      timeout: 5s
-      retries: 5
-      start_period: 30s
+      interval: 5s # Check every 5 seconds
+      timeout: 5s # Timeout after 5 seconds
+      retries: 5 # Retry 5 times
+      start_period: 30s # Wait for 30 seconds before starting health checks
+    logging:
+      driver: json-file
+      options:
+        max-size: '10m' # Maximum log file size
+        max-file: '5' # Maximum number of log files to retain
 
-  pgadmin:
+  docker-pgadmin:
     image: dpage/pgadmin4
-    container_name: pgadmin
+    container_name: docker-pgadmin
     environment:
       PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
       PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
@@ -41,10 +53,10 @@ services:
     ports:
       - '5050:80'
     depends_on:
-      - postgres
-    networks:
-      - app-network
+      - docker-postgresql
 
 networks:
-  app-network:
+  default:
     driver: bridge
+    name: app-network
+    external: true
