--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,12 @@ package-lock.json
 # Ignore build artifacts
 build/
 dist/
-data/
 
-#ignore .env file
+# Ignore .env file
 .env
+
+# Ignore Postgres Data from Docker
+pgdata/
+
+# Ignore MongoDB Data from Docker
+data/
