--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: mongo:latest
     container_name: mongodb
     volumes:
-      - mongo_data:/data/db
+      - data:/data/db
     ports:
       - '27017:27017'
     networks:
@@ -21,13 +21,13 @@ services:
     image: postgres:13
     container_name: postgresql
     volumes:
-      - ./pgdata:/var/lib/postgresql/data
+      - data:/data/db
     environment:
-      POSTGRES_USER: ${POSTGRES_SUPERUSER}
-      POSTGRES_PASSWORD: ${POSTGRES_SUPERUSER_PASSWORD}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
     ports:
-      - '5432:5432'
+      - '5432:${POSTGRES_DB_PORT}'
     networks:
       - default
     restart: always
@@ -61,5 +61,4 @@ networks:
     name: app-network
 
 volumes:
-  mongo_data:
-  postgres_data:
+  data: {}
