--- a/.env-example
+++ b/.env-example
@@ -1,3 +1,10 @@
-PGADMIN_DEFAULT_EMAIL=your_email@email.com  
-PGADMIN_DEFAULT_PASSWORD=your_password_here
-POSTGRES_SUPERUSER_PASSWORD=your_password_here
+PGADMIN_DEFAULT_EMAIL=email@gmail.com
+PGADMIN_DEFAULT_PASSWORD=password1!
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=password1!
+POSTGRES_DB=database_name
+POSTGRES_DB_PORT=5432
+PORT=5000
+
+MONGODB_CONNECTION_STRING=mongodb://localhost:27017/database_name
+POSTGRES_CONNECTION_STRING=postgresql://postgres:password1!!@localhost:5432/database_name
