--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
 		"http-proxy-middleware": "^2.0.6",
 		"mongoose": "^8.2.1",
 		"pg": "^8.11.3",
+		"sequelize": "^6.37.1",
 		"wait-for-postgres": "^1.5.3"
 	},
 	"devDependencies": {
