--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -13,19 +13,16 @@
     "paths": {
       "*": [
         "src/*"
-      ],
-      "shared/types/*": [
-        "shared/types/*"
-      ],
-      "@types/*": [
-        "node_modules/@types/*"
       ]
     },
     "lib": [
       "es6",
       "dom",
       "es2017"
-    ],
-    "allowJs": true
-  }
+    ]
+  },
+  "exclude": [
+    "node_modules",
+    "build"
+  ]
 }
