--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"dev": "concurrently \"npm run server\" \"npm run client\"",
 		"all": "npm-run-all --parallel server client",
 		"lint": "eslint .",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"prettier:format": "prettier --write 'client/**/*' 'server/**/*' 'shared/**/*'"
 	},
 	"author": "Joshua M. Small",
 	"license": "MIT",
@@ -19,6 +20,7 @@
 	},
 	"devDependencies": {
 		"eslint": "^8.57.0",
+		"prettier": "^3.2.5",
 		"react-scripts": "^5.0.1"
 	}
 }
