--- a/package.json
+++ b/package.json
@@ -9,17 +9,21 @@
 		"client": "cd client && npm start",
 		"dev": "concurrently \"npm run server\" \"npm run client\"",
 		"all": "npm-run-all --parallel server client",
-		"lint": "eslint .",
+		"lint": "eslint . && prettier --check .",
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"prettier:format": "prettier --write 'client/**/*' 'server/**/*' 'shared/**/*'"
+		"prettier:format": "prettier --write ."
 	},
 	"author": "Joshua M. Small",
 	"license": "MIT",
 	"dependencies": {
-		"concurrently": "^8.2.2"
+		"concurrently": "^8.2.2",
+		"prettier-plugin-organize-imports": "^3.2.4"
 	},
 	"devDependencies": {
 		"eslint": "^8.57.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-import": "^2.29.1",
+		"eslint-plugin-prettier": "^5.1.3",
 		"prettier": "^3.2.5",
 		"react-scripts": "^5.0.1"
 	}
