--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -11,7 +11,8 @@
 		"jsx": "react",
 		"baseUrl": "./",
 		"paths": {
-			"*": ["src/*"]
+			"*": ["src/*"],
+			"@utils/*": ["src/utils/*"]
 		},
 		"lib": ["es6", "dom", "es2017"]
 	},
