--- a/package.json
+++ b/package.json
@@ -20,10 +20,16 @@
 		"prettier-plugin-organize-imports": "^3.2.4"
 	},
 	"devDependencies": {
+		"@typescript-eslint/eslint-plugin": "^7.3.1",
+		"@typescript-eslint/parser": "^7.3.1",
 		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-import": "^2.29.1",
+		"eslint-plugin-jest-dom": "^5.1.0",
 		"eslint-plugin-prettier": "^5.1.3",
+		"eslint-plugin-react": "^7.34.1",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-testing-library": "^6.2.0",
 		"prettier": "^3.2.5",
 		"react-scripts": "^5.0.1"
 	}
