--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
 	"license": "MIT",
 	"dependencies": {
 		"concurrently": "^8.2.2",
-		"prettier-plugin-organize-imports": "^3.2.4"
+		"i18next": "^23.10.1",
+		"i18next-http-backend": "^2.5.0",
+		"prettier-plugin-organize-imports": "^3.2.4",
+		"react-i18next": "^14.1.0"
 	},
 	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": "^5.5.0",
