--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -11,22 +11,10 @@
 		"jsx": "react",
 		"baseUrl": "./",
 		"paths": {
-			"*": [
-				"src/*"
-			],
-			"@utils/*": [
-				"src/utils/*"
-			]
+			"*": ["src/*"],
+			"@utils/*": ["src/utils/*"]
 		},
-		"lib": [
-			"es6",
-			"dom",
-			"es2017"
-		]
+		"lib": ["es6", "dom", "es2017"]
 	},
-	"exclude": [
-		"node_modules",
-		"build",
-		"ignored"
-	]
+	"exclude": ["node_modules", "build", "ignored"]
 }
