--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,12 @@
 		"@reduxjs/toolkit": "^2.2.1",
 		"@types/axios": "^0.14.0",
 		"axios": "^1.6.7",
+		"chart.js": "^4.4.2",
 		"dayjs": "^1.11.10",
 		"i18next": "^23.10.1",
 		"i18next-http-backend": "^2.5.0",
 		"react": "^18.2.0",
+		"react-chartjs-2": "^5.2.0",
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.51.0",
 		"react-i18next": "^14.1.0",
