--- a/.env-example
+++ b/.env-example
@@ -4,6 +4,7 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=password1!
 POSTGRES_DB=database_name
 POSTGRES_DB_PORT=5432
+POSTGRES_HOST_IP=192.168.144.2
 PORT=5000
 
 MONGODB_CONNECTION_STRING=mongodb://localhost:27017/database_name
