--- a/client/package.json
+++ b/client/package.json
@@ -46,6 +46,7 @@
 		"@types/node": "^20.12.5",
 		"@types/react-dom": "^18.2.24",
 		"jest": "^29.7.0",
+		"sass": "^1.74.1",
 		"ts-jest": "^29.1.2",
 		"typescript": "^5.4.4"
 	},
